[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "run-bitcoin-tests"
version = "1.0.0"
description = "A cross-platform Python script to run Bitcoin Core C++ unit tests using Docker"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "colorama",
]

[project.optional-dependencies]
dev = [
    # Core Testing Packages
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",

    # Linting
    "pylint>=2.15.0",
    "mypy>=1.0.0",
    "autopep8>=2.0.0",

    # Code Formatting
    "black>=22.0.0",
    "isort>=5.10.0",
]

[project.scripts]
run-bitcoin-tests = "run_bitcoin_tests.main:main"

[project.urls]
Homepage = "https://github.com/tboy1337/run-bitcoin-tests"
Repository = "https://github.com/tboy1337/run-bitcoin-tests"
Issues = "https://github.com/tboy1337/run-bitcoin-tests/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["run_bitcoin_tests"]
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true